# labview

./: .gitignore  Dockerfile  LICENSE  README.md  agents.md  docker-compose.yml  mise.toml  pyproject.toml
codex/: __init__.py
codex/api/: main.py  utils.py
codex/api/routes/: artifacts.py  entries.py  integration_variables.py  notebooks.py  pages.py  search.py  sql.py  workspace.py
codex/cli/: main.py
codex/core/: __init__.py  entry.py  git_manager.py  notebook.py  page.py  storage.py  utils.py  workspace.py
codex/db/: __init__.py  migrate.py  models.py  operations.py
codex/db/migrations/: env.py  script.py.mako
codex/db/migrations/versions/: 001_initial_schema.py
codex/integrations/: __init__.py  api_call.py  base.py  comfyui.py  database_query.py  graphql.py  registry.py
frontend/: Dockerfile  Dockerfile.dev.frontend  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: Sidebar.vue
frontend/src/components/blocks/: CellBlock.vue  TextBlock.vue
frontend/src/components/entry/: ApiCallForm.vue  ComfyUIForm.vue  CustomForm.vue  DatabaseQueryForm.vue  GraphQLForm.vue  (+1 more)
frontend/src/router/: index.ts
frontend/src/stores/: notebooks.ts
frontend/src/types/: index.ts
frontend/src/views/: ComfyUIView.vue  CreateEntryView.vue  DemoView.vue  HomeView.vue  NotebookDetailView.vue  NotebooksView.vue  PageDetailView.vue  SQLViewerView.vue  SearchView.vue
tests/: test_core.py  test_db_crud.py  test_integrations.py  test_migrations.py
